fixed some issues

--- a/Grubhub/server/package.json
+++ b/Grubhub/server/package.json
@@ -4,7 +4,8 @@
   "description": "API for Grubhub built on express.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -r esm ./src/app.js  "
   },
   "author": "Savyasachi Jagadeeshan",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
