--- a/Grubhub/client/package.json
+++ b/Grubhub/client/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
