--- a/Grubhub/server/package.json
+++ b/Grubhub/server/package.json
@@ -13,16 +13,20 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.15.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "datauri": "^2.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^5.19.0"
   }
 }
