--- a/Grubhub/client/package.json
+++ b/Grubhub/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-bootstrap-table-next": "^3.2.1",
+    "react-bootstrap-table2-filter": "^1.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
