--- a/Grubhub/server/package.json
+++ b/Grubhub/server/package.json
@@ -4,7 +4,7 @@
   "description": "API for Grubhub built on express.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon -r esm ./src/app.js  "
   },
   "author": "Savyasachi Jagadeeshan",
@@ -13,6 +13,8 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cloudinary": "^1.15.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -21,12 +23,14 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.2.1",
     "multer": "^1.4.2",
     "mysql2": "^1.7.0",
+    "nodemon": "^1.19.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "sequelize": "^5.19.0"
+    "sequelize": "^5.19.4"
   }
 }
