--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,6 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7",
-    "sequelize": "^5.19.4"
+    "path": "^0.12.7"
   }
 }
