--- a/server/package.json
+++ b/server/package.json
@@ -5,29 +5,30 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon -r esm ./src/app.js  "
+    "start": "nodemon -r esm ./src/app.js",
+    "debug": "nodemon -r esm --inspect-brk --inspect=0.0.0.0:9229 ./src/app.js"
   },
   "author": "Savyasachi Jagadeeshan",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "bluebird": "^3.5.5",
+    "bluebird": "^3.7.1",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "cloudinary": "^1.15.0",
+    "cloudinary": "^1.16.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "datauri": "^2.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
+    "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.1",
-    "mongoose": "^5.7.4",
+    "mongoose": "^5.7.5",
     "multer": "^1.4.2",
     "mysql2": "^1.7.0",
-    "nodemon": "^1.19.3",
+    "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
