--- a/middleware/package.json
+++ b/middleware/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "kafka-node": "^3.0.1"
   }
 }
