--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "react-bootstrap-table-next": "^3.2.1",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.2.0",
+    "react-bootstrap-table2-paginator": "^2.1.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
